syntax="proto3";

option go_package = "./proto";

package green_service;

service GreetService{
    rpc SayHello(NoParams) returns (HelloResponse);

    rpc SayHelloServerStreaming(NamesList) returns (stream HelloResponse);

    rpc SayHelloClientStreaming(stream HelloRequest) returns (MessageList);

    rpc SayHelloBidirectionalStreaming(stream HelloRequest) returns (stream HelloResponse);
}

message NoParams{};

message HelloRequest{
    string name = 1;
}

message HelloResponse{
    string message = 1;
}

message NamesList{
    repeated string names = 1;
}

message MessageList{
    repeated string messages = 1;
}
